# piradar

./: .gitignore  .travis.yml  CW_Doppler.py  CW_playback.grc  CW_red-pitaya.grc  CWdoppler.m  CWsubspace.py  DlayerAbsorption.py  FMCW_load_process_data.py  FMCW_red-pitaya.grc  FMCW_sim.grc  FMCW_slice_plot_downsampled.py  FMCW_usrp.grc  FMCWteam.py  Looper.py  PM_red-pitaya.grc  PM_sim.grc  PSD.grc  PSK_red-pitaya.grc  PSK_sim.grc  PlaybackFMCW.grc  PlotCW.m  PlotSimple.py  PlotSpectrum.py  README.md  README.rst  ReflectionHeight.py  SimADCclipping.py  StreamingChirpRX.py  beta_playback.grc  create_waveform.py  get_temperature.sh  get_voltage.sh  hamsci_pubplot.py  kitten.pnm  pyproject.toml  receive.py  recieve.py  requirements.txt  rp_eclipse.py  (+9 more)
doc/: bentpipe.dwg  block.dwg  labtest.dwg  pitaya-radar-block-diagram.dwg
matlab/: PlotCW.m  Sim_CWdoppler.m  read_complex_binary.m
piradar/: __init__.py  delayseq.py  fwdmodel.py  plots.py  raspi.py
reference/: README.rst  freq_shift.py.grc  hf_analyze.py  stuffr.py
tests/: test.py  test_all.py
