[metadata]
name = piradar
version = 0.6.0
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
description = HF radar for ionosphere using Red Pitaya for RF and Raspberry Pi coprocessor
url = https://github.com/scivision/piradar
keywords =
  Red Pitaya
  Raspberry Pi
  HF radar
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  numpy
  scipy
  h5py
  xarray

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
